[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/Sound/engine.wav" type="AudioStream" id=1]
[ext_resource path="res://scripts/sound/LoopableSfx.gd" type="Script" id=2]

[node name="LoopableSfx" type="Node2D"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1, 0 )
stream = ExtResource( 1 )
volume_db = -80.0
autoplay = true
bus = "Sfx"
__meta__ = {
"_editor_description_": ""
}

[node name="StartSoundTween" type="Tween" parent="."]

[node name="EndSoundTween" type="Tween" parent="."]
[connection signal="tween_completed" from="EndSoundTween" to="." method="_on_EndSoundTween_tween_completed"]
